# deskclock

./: CMakeLists.txt  sdkconfig  sdkconfig.old
components/einkdrv/: CMakeLists.txt  Quicksand_12.h  Quicksand_140.h  Quicksand_28.h  Roboto_150.h  Roboto_20.h  Roboto_30.h  Roboto_50.h  batt_icon.h  bt_icon.h  epd_driver.c  epd_driver.h  font.c  i2s_data_bus.c
components/einkdrv/libjpeg/: libjpeg.c
components/libjpeg/: CMakeLists.txt  libjpeg.c
components/pcf8563/: CMakeLists.txt  pcf8563.c  pcf8563.h
main/: CMakeLists.txt  battery.c  battery.h  ble.c  ble.h  ble_time_sync.c  ble_time_sync.h  clock.c  clock.h  display.c  display.h  esp32_deskclock.c  gatt_svr.c
scripts/: imgconvert.py
